--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,13 @@ name = "two_thousand_forty_eight"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 bevy = "0.12.1"
 bevy-inspector-egui = "0.22.1"
 rand = "0.8"
+
+[features]
+default = []
+debug = ["debug-inspector", "debug-commands"]
+debug-commands = []
+debug-inspector = []
